add redis get all players

--- a/packages/.env
+++ b/packages/.env
@@ -34,3 +34,5 @@ ENDPOINT_EVENT_RESULTS="eventresults.php?"
 ENDPOINT_EVENTS_LEAGUE_BY_SEASON="eventsseason.php?"
 ENDPOINT_PLAYER_CONTRACTS="lookupcontracts.php?"
 ENDPOINT_TABLE_BY_LEAGUE_AND_SEASON="lookuptable.php?"
+
+REDIS_DATA_EXPIRATION_S=86400
