--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"format": "prettier --write './src/**/*.{js,svelte,html,ts}'",
 		"lint": "eslint './src/**/*.{js,ts,svelte}'",
 		"lint:fix": "eslint --fix './src/**/*.{js,ts,svelte}'",
-		"prelint": "npm run format"
+		"prelint": "npm run format",
+		"poll": "nuv activation poll"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
